# dftlabs-backend

./: .env  .env.test  .gitignore  Dockerfile  pyproject.toml  render.yaml
app/: config.py  database.py  main.py
app/agents/: jobs_agent.py  research_agent.py
app/auth/: jwt.py
app/core/: llm_client.py  logging.py  scheduler.py
app/models/: __init__.py  blog.py  event.py  job.py  product.py  registration.py
app/routers/: __init__.py  admin.py  blog.py  events.py  jobs.py  products.py  registrations.py
app/services/: cache_service.py  email_service.py
tests/: conftest.py
tests/agents/: test_jobs_agent.py  test_research_agent.py
tests/routers/: test_admin.py  test_blog.py  test_events.py  test_jobs.py  test_products.py  test_registrations.py
